refactor: BatchSize를 직접구현 한 N+1 문제 ㅎ결